[gd_scene load_steps=17 format=2]

[ext_resource path="res://worlds/worldSelect/objects/worldSelect/worldSelect.gd" type="Script" id=1]
[ext_resource path="res://worlds/worldSelect/objects/worldSelect/worldSelect.png" type="Texture" id=2]
[ext_resource path="res://entities/classes/interactComponent/interactBallon.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://gameplay/MENU/saveslot/panel.png" type="Texture" id=5]
[ext_resource path="res://entities/player/HUD/sprites/closeButton.png" type="Texture" id=6]
[ext_resource path="res://worlds/worldSelect/objects/worldSelect/sprites/literatureArtPortal.png" type="Texture" id=7]
[ext_resource path="res://worlds/worldSelect/objects/worldSelect/scripts/literatureWorld.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 48 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 128, 0, 128, 128 )
margin_left = 16.0
margin_right = 16.0
margin_top = 16.0
margin_bottom = 16.0
expand_margin_left = 16.0
expand_margin_right = 16.0
expand_margin_top = 16.0
expand_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 96 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "open"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 64, 96 ), Rect2( 64, 0, 64, 96 ), Rect2( 128, 0, 64, 96 ), Rect2( 192, 0, 64, 96 ), Rect2( 256, 0, 64, 96 ), Rect2( 320, 0, 64, 96 ) ]
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 27 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 24, 27 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 24, 27 )

[node name="worldSelect" type="Area2D"]
collision_layer = 1024
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -48 )
shape = SubResource( 1 )

[node name="WorldSelect" type="Sprite" parent="."]
position = Vector2( 0, -28 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 2

[node name="interactBallon" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -56 )
areaInteractPath = NodePath("..")
content = [ "/btn:interact" ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.611765 )

[node name="margin" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 128
custom_constants/margin_top = 160
custom_constants/margin_left = 128
custom_constants/margin_bottom = 160

[node name="panel" type="PanelContainer" parent="CanvasLayer/Control/margin"]
margin_left = 128.0
margin_top = 160.0
margin_right = 1233.0
margin_bottom = 576.0
custom_styles/panel = SubResource( 2 )

[node name="list" type="HBoxContainer" parent="CanvasLayer/Control/margin/panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1089.0
margin_bottom = 400.0
custom_constants/separation = 32
alignment = 1

[node name="literatureWorld" type="TextureButton" parent="CanvasLayer/Control/margin/panel/list"]
margin_left = 344.0
margin_right = 728.0
margin_bottom = 384.0
rect_min_size = Vector2( 384, 384 )
size_flags_horizontal = 4
size_flags_vertical = 6
expand = true
script = ExtResource( 8 )

[node name="texture" type="TextureRect" parent="CanvasLayer/Control/margin/panel/list/literatureWorld"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 6 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/margin/panel/list/literatureWorld"]
anims/RESET = SubResource( 7 )
anims/open = SubResource( 8 )

[node name="caveWorld" type="TextureButton" parent="CanvasLayer/Control/margin/panel/list"]
visible = false
margin_left = 552.0
margin_top = 128.0
margin_right = 680.0
margin_bottom = 256.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource( 4 )
expand = true

[node name="close" type="TextureButton" parent="CanvasLayer/Control/margin"]
margin_left = 1185.0
margin_top = 160.0
margin_right = 1233.0
margin_bottom = 214.0
rect_min_size = Vector2( 48, 54 )
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 5 )
texture_disabled = SubResource( 3 )
expand = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="entered" from="interactBallon" to="." method="_on_interactBallon_entered"]
[connection signal="exitered" from="interactBallon" to="." method="_on_interactBallon_exitered"]
[connection signal="interacted" from="interactBallon" to="." method="_on_interactBallon_interacted"]
[connection signal="focus_entered" from="CanvasLayer/Control/margin/panel/list/literatureWorld" to="CanvasLayer/Control/margin/panel/list/literatureWorld" method="_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/Control/margin/panel/list/literatureWorld" to="CanvasLayer/Control/margin/panel/list/literatureWorld" method="_focus_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Control/margin/panel/list/literatureWorld" to="CanvasLayer/Control/margin/panel/list/literatureWorld" method="_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/margin/panel/list/literatureWorld" to="CanvasLayer/Control/margin/panel/list/literatureWorld" method="_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/margin/close" to="." method="_on_close_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
